# Maze

./: .gitignore  Dockerfile  Maze.opam  README.md  dune-project  willsons.html  wilsonscanvas.js
.github/workflows/: ci.yml
_build/: .db  .digest-db  log
_build/default/: META.Maze  Maze.dune-package  Maze.install  Maze.opam  README.md
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/bcab0be011c28261c514e69f4fe141f8/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: Maze.cma  Maze.cmxa  Maze.cmxs  backtracking.ml  maze.ml  maze.mli  maze.pp.ml  util.pp.ml  wilson.ml
_build/default/lib/.Maze.objs/: animate.impl.d  backtracking.impl.all-deps  backtracking.impl.d  bench_timer.impl.d  eller.impl.all-deps  eller.impl.d  generator.impl.d  maze.impl.d  maze.intf.d  util.impl.d  wilson.impl.d
_build/default/lib/.merlin-conf/: lib-Maze
_build/default/lib/algorithms/: backtracking.ml  backtracking.pp.ml  eller.ml  eller.pp.ml  wilson.ml  wilson.pp.ml
_build/default/lib/benchmark/: bench_timer.cma  bench_timer.cmxa  bench_timer.cmxs  bench_timer.ml  bench_timer_stubs.c
_build/default/lib/graphics/: animate.pp.ml
_build/default/test/.merlin-conf/: exe-test_Maze
analysis/: wilson.aux  wilson.fdb_latexmk  wilson.fls  wilson.out  wilson.tex
docs/: brainstorm.md  representation.md
lib/: animate.ml  dune  maze.ml  util.ml  wilson.ml
lib/KanJiaRui/: backtracking.ml
lib/algorithms/: backtracking.ml  eller.ml  wilson.ml
lib/benchmark/: dune
lib/graphics/: animate.ml
test/: dune  test_Maze.ml
(+75 files in other folders)
