opam-version: "2.0"
name: "Maze"
version: "1.0.0"
synopsis: "A short synopsis"
description: "A longer description"
maintainer: "Maintainer Name <maintainer@example.com>"
authors: "Author Name <author@example.com>"
license: "LICENSE"
homepage: "https://github.com/username/reponame"
bug-reports: "https://github.com/username/reponame/issues"
depends: [
  "ocaml"
  "dune" {>= "3.1"}
  "tsdl"
  "tsdl-image"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/username/reponame.git"
